philly-311-citywide-meta/src/objects/Participant__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <formula>Candidate__r.Address__c</formula>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>Candidate__r.Age__c</formula>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BirthOfDate__c</fullName>
        <formula>Candidate__r.BirthOfDate__c</formula>
        <label>Birth Of Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BloodType__c</fullName>
        <formula>TEXT(Candidate__r.BloodType__c)</formula>
        <label>Blood Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CandidateName__c</fullName>
        <formula>Candidate__r.CandidateName__c</formula>
        <label>Candidate Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Candidate__c</fullName>
        <label>Candidate</label>
        <referenceTo>Candidate__c</referenceTo>
        <relationshipLabel>Participant</relationshipLabel>
        <relationshipName>Participants</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CodeUrlImage__c</fullName>
        <formula>IMAGE( CodeUrl__c , &apos;sorry&apos;)</formula>
        <label>CodeUrlImage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CodeUrl__c</fullName>
        <formula>&quot;https://chart.googleapis.com/chart?chs=150x150&amp;cht=qr&amp;choe=UTF-8&amp;chl=com.salesforce.salesforce1://entity/view?entityId=&quot; +  Id</formula>
        <label>CodeUrl</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_UseForWorkflowProcess__c</fullName>
        <label>Email_UseForWorkflowProcess</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Candidate__r.Email__c</formula>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <formula>Volunteer__r.EndDate__c</formula>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EntryDate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Entry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EntryNumber__c</fullName>
        <formula>Id</formula>
        <label>Entry Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <formula>Candidate__r.Fax__c</formula>
        <label>FAX</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <formula>TEXT(Candidate__r.Gender__c)</formula>
        <label>Gender</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MeetPlace__c</fullName>
        <formula>Volunteer__r.MeetPlace__c</formula>
        <label>Meet Place</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MeetTime__c</fullName>
        <formula>Volunteer__r.StartTime__c</formula>
        <label>Meet Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MobilePhone__c</fullName>
        <formula>Candidate__r.MobilePhone__c</formula>
        <label>Mobile Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberOfCheckin__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number Of Checkin</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OtherRole__c</fullName>
        <label>Other Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participant__c</fullName>
        <formula>NumberOfCheckin__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Participant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ParticipateFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Participate Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>Candidate__r.Phone__c</formula>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <formula>Volunteer__r.StartDate__c</formula>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VolunteerName__c</fullName>
        <formula>Volunteer__r.Name</formula>
        <label>Volunteer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VolunteerStatus__c</fullName>
        <formula>TEXT(Volunteer__r.Status__c)</formula>
        <label>Volunteer Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volunteer__c</fullName>
        <label>Volunteer</label>
        <referenceTo>Volunteer__c</referenceTo>
        <relationshipLabel>Participant</relationshipLabel>
        <relationshipName>Participants</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>isMailSentFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isMailSentFlg</label>
        <type>Checkbox</type>
    </fields>
    <label>Participant</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Volunteer__c</columns>
        <columns>Participant__c</columns>
        <columns>Email__c</columns>
        <columns>ParticipateFlag__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PT{00000000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>